[tool.poetry]
name = "dsa_401"
version = "0.1.0"
description = ""
authors = ["Victor Sullivan <victorsully79@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9.5"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
